# foresight-mcp

./: .bandit  .gitignore  0001-Add-tests-for-SqliteBackend.patch  DEPLOYMENT.md  INSTALL.md  LICENSE  PERFORMANCE_AUDIT_REPORT.md  PERFORMANCE_AUDIT_SUMMARY.md  README.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_AUDIT_SUMMARY.md  coverage.lcov  eval_report.json  manifest  patch_checks.py  performance_audit_complete.txt  performance_audit_findings.txt  pyproject.toml  security_audit_concise.md  test_tools.sh
.agent/internal/plans/: 2026-04-24-multi-tenancy.md
.beads/: export-state.json  interactions.jsonl  issues.jsonl  last-touched  metadata.json  push-state.json
.beads/backup/: 3kimiurcjnm0iuv9pkkghdkoichevjrt.darc  backup_state.json  manifest
.github/workflows/: ci.yml  publish.yml
apps/docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
apps/docs/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
apps/docs/.docusaurus/docusaurus-plugin-content-blog/default/: blogMetadata-default.json
apps/docs/.docusaurus/docusaurus-plugin-content-docs/default/: __mdx-loader-dependency.json  site-docs-api-cli-reference-md-7c3.json  site-docs-api-overview-md-65d.json  site-docs-api-python-api-md-501.json  site-docs-installation-md-3b8.json  (+16 more)
apps/docs/docs/: installation.md  intro.md  quickstart.md
apps/docs/docs/api/: cli-reference.md  overview.md  python-api.md  typescript-api.md
apps/docs/docs/concepts/: blocks.md  events.md  hooks.md  memory.md  websocket.md
apps/docs/docs/examples/: basic-usage.md  event-hooks.md  sdk-projects.md  websocket-client.md
apps/docs/docs/guides/: managing-blocks.md  querying-memories.md  real-time-updates.md  setting-up-hooks.md  storing-memories.md
apps/docs/src/css/: custom.css
apps/docs/src/pages/: index.tsx
foresight_cli/: __init__.py  bootstrap.py  cli.py
foresight_cli/commands/: __init__.py  analysis.py  blocks.py  curate.py  eval.py  memory.py  system.py
foresight_cli/tui/: __init__.py  app.py
foresight_cli/tui/screens/: blocks.py  dashboard.py  memories.py
foresight_cli/utils/: __init__.py  config.py  output.py
foresight_mcp/: __init__.py  __main__.py  audit.py  auth.py  block_registry.py  capture.py  circuit_breaker.py  cluster_service.py  clustering.py  compliance.py  config.py  connection_pool.py  consumer_group.py  context_blocks.py  crdt.py  crisis_detection.py  decay_model.py  document_layer.py  embedding_validation.py  enhanced_synthesizer.py  entity_extractor.py  eval_harness.py  event_bus.py  ghost_cleanup.py  graph_edge_decay.py  graph_store.py  hooks.py  hybrid_retriever.py  injection_budget.py  llm_client.py  llm_errors.py  maintenance_eval.py  memory_components.py  memory_gc.py  memory_maintenance.py  memory_maintenance.py.backup  memory_relationships.py  memory_types.py  narrative_cache.py  phrase_triggers.py  (+19 more)
foresight_mcp/backend/: __init__.py  backend_migrations.py  base.py  postgres_backend.py  schema_ddl.py  sqlite_backend.py
foresight_mcp/llm_providers/: __init__.py  anthropic.py  openai.py
foresight_mcp/migrations/: 001_add_tenant_to_graph_tables.py  002_unified_schema.py  __init__.py
foresight_mcp/projections/: __init__.py  base.py  builder.py  reports.py
foresight_mcp/websocket/: __init__.py  server.py  subscriptions.py
scripts/: foresight  foresight-cli.py  pypi-publish.sh  setup.sh
scripts/.temp/: fix_tenant_gaps.py
tests/: test_audit.py  test_auth.py  test_backend_migrations.py  test_block_registry.py  test_capture.py  test_clustering_tools.py  test_connection_pool.py  test_crdt.py  test_decay_model.py  test_document_layer.py  test_enhanced_synthesizer.py  test_entity_graph.py  test_eval_harness.py  test_event_bus.py  test_graph_store_tenant.py  test_hooks.py  test_hybrid_retriever.py  test_injection_budget.py  test_llm_client.py  test_main.py  test_memory_gc.py  test_memory_maintenance.py  test_memory_relationships.py  test_memory_scope.py  test_narrative_cache.py  test_profile_synthesizer.py  test_rate_limiter.py  test_recovery.py  test_reflection_engine.py  test_reflection_narrative.py  test_rrf_tuning.py  test_schema.py  test_semantic_search.py  test_sensitive_gating.py  test_server.py  test_sqlite_backend.py  test_stream_producer.py  test_sync.py  test_temporal.py  test_tenant_context.py  (+3 more)
(+2 files in other folders)
