[project]
name = "foresight-mcp"
version = "1.0.0"
description = "Persistent memory for Claude Code via MCP protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hindsight Team", email = "team@vectorize.io" }]
keywords = ["mcp", "claude", "memory", "ai", "foresight"]
dependencies = ["fastmcp>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0"]

[project.scripts]
foresight-mcp = "foresight_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foresight_mcp"]
