[project]
name = "foresight-mcp"
version = "1.2.0"
description = "Persistent memory for AI agents — CLI, TUI, MCP server, and Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Foresight Team", email = "team@vectorize.io" },
]
keywords = [
    "mcp", "memory", "ai", "foresight",
    "cli", "tui",
    "claude", "llm", "agent",
    "continuity", "context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = ["fastmcp>=3.2.0", "redis>=5.0"]

[project.optional-dependencies]
cli = ["typer>=0.9.0", "rich>=13.0"]
tui = ["textual>=1.0.0"]
postgres = ["psycopg[binary,pool]>=3.2"]
redis = ["redis>=5.0"]
all = ["foresight-mcp[cli,tui,postgres,redis]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "textual>=1.0.0",
    "hatchling>=1.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/daggerstuff/foresight-mcp"
Repository = "https://github.com/daggerstuff/foresight-mcp"
Documentation = "https://foresight.vectorize.io"
Issues = "https://github.com/daggerstuff/foresight-mcp/issues"
Changelog = "https://github.com/daggerstuff/foresight-mcp/releases"

[project.scripts]
foresight-mcp = "foresight_mcp.__main__:main"
foresight-cli = "foresight_cli.cli:main"
foresight = "foresight_cli.cli:main"

# Evaluation harness (PIX-3953)
eval-run = "foresight_mcp.eval_harness:run_eval"
eval-baseline = "foresight_mcp.eval_harness:run_eval"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "textual>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foresight_mcp", "foresight_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/foresight_mcp",
    "/foresight_cli",
    "/scripts",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.bandit]
exclude_dirs = ["tests"]



[tool.radarlint]
exclude_dirs = ["tests"]
skip_rules = ["python:S1244"]

